--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid container">
+        <a class="navbar-brand fs-2 fw-bold" href="#">Library</a>
+      </div>
+    </nav>
+
+    <main></main>
+
     <!-- Bootstrap Javascript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
