Created book item holder and created book card template

--- a/index.html
+++ b/index.html
@@ -23,7 +23,40 @@
       </div>
     </nav>
 
-    <main></main>
+    <!-- Main -->
+    <main class="container">
+      <!-- Add Books Button -->
+      <div class="text-center">
+        <button
+          type="button"
+          class="btn btn-lg btn-outline-dark fw-semibold m-10 mx-auto mt-4"
+        >
+          + Add Book
+        </button>
+      </div>
+
+      <!-- Books Cards Section -->
+      <div id="book-cards-holder" class="mt-4">
+        <!-- Template -->
+        <div class="bg-white border border-1 border-dark rounded p-3">
+          <h3>Title: Atomic Habits</h3>
+          <h3>Author: James Claire</h3>
+          <h3>Pages: 300</h3>
+          <h3>Language: English</h3>
+          <div class="d-grid gap-2 mt-2">
+            <button class="btn btn-outline-success fw-semibold" type="button">
+              Read
+            </button>
+            <button
+              class="btn btn-outline-danger border-1 fw-semibold"
+              type="button"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- Bootstrap Javascript -->
     <script
