--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <!-- Add Books Button -->
       <div class="text-center">
         <button
+          id="add-book"
           type="button"
           class="btn btn-lg btn-outline-dark fw-semibold m-10 mx-auto mt-4"
         >
@@ -57,6 +58,57 @@
         </div>
       </div>
     </main>
+
+    <!-- Modal -->
+    <div id="modal">
+      <div id="modal-content-holder">
+        <div id="modal-content" class="bg-white border p-2 rounded">
+          <h2 class="text-center">Add a book</h2>
+          <div id="input-holder">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Title"
+              id="title"
+            />
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Author"
+              id="author"
+            />
+            <input
+              type="number"
+              class="form-control"
+              placeholder="Number Of Pages"
+              id="number-of-pages"
+            />
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Language"
+              id="language"
+            />
+            <div id="checkbox" class="text-center">
+              <p style="font-size: 22px">Have Read</p>
+              <input
+                class="form-check-input mt-0"
+                type="checkbox"
+                style="width: 25px; height: 25px"
+              />
+            </div>
+            <div class="d-flex justify-content-around mb-2">
+              <button type="button" class="btn btn-outline-secondary px-5">
+                Close
+              </button>
+              <button type="button" class="btn btn-outline-secondary px-5">
+                Save
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Bootstrap Javascript -->
     <script
