--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
 
     <!-- Modal -->
-    <div id="modal">
+    <div id="overlay">
       <div id="modal-content-holder">
         <div id="modal-content" class="bg-white border p-2 rounded">
           <h2 class="text-center">Add a book</h2>
@@ -98,10 +98,18 @@
               />
             </div>
             <div class="d-flex justify-content-around mb-2">
-              <button type="button" class="btn btn-outline-secondary px-5">
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-5"
+                id="close"
+              >
                 Close
               </button>
-              <button type="button" class="btn btn-outline-secondary px-5">
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-5"
+                id="save"
+              >
                 Save
               </button>
             </div>
