--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
 
     <!-- Modal -->
-    <div id="overlay">
+    <div id="modal">
       <div id="modal-content-holder">
         <div id="modal-content" class="bg-white border p-2 rounded">
           <h2 class="text-center">Add a book</h2>
@@ -117,6 +117,7 @@
         </div>
       </div>
     </div>
+    <div id="overlay"></div>
 
     <!-- Bootstrap Javascript -->
     <script
