--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <button
           type="button"
           class="btn btn-lg btn-outline-dark fw-semibold m-10 mx-auto mt-4"
+          data-bs-toggle="modal"
+          data-bs-target="#modal"
         >
           + Add Book
         </button>
@@ -57,6 +59,92 @@
         </div>
       </div>
     </main>
+
+    <!-- Modal -->
+    <div class="modal" id="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add Book</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- Title -->
+            <div class="mb-1">
+              <label for="book-title" class="form-label">Book Title</label>
+              <input
+                type="text"
+                class="form-control"
+                id="book-title"
+                placeholder="Book Title"
+              />
+            </div>
+
+            <!-- Author -->
+            <div class="mb-1">
+              <label for="author-name" class="form-label">Author Name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="author-name"
+                placeholder="Author Name"
+              />
+            </div>
+
+            <!-- Pages -->
+            <div class="mb-1">
+              <label for="pages-number" class="form-label">Pages Number</label>
+              <input
+                type="number"
+                class="form-control"
+                id="pages-number"
+                placeholder="Pages Number"
+              />
+            </div>
+
+            <!-- Language -->
+            <div class="mb-1">
+              <label for="book-language" class="form-label"
+                >Book Language</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="book-language"
+                placeholder="Book Language"
+              />
+            </div>
+
+            <!-- Read -->
+            <div class="form-check mt-2">
+              <label class="form-check-label" for="flexCheckDefault">
+                I have read the book
+              </label>
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="flexCheckDefault"
+              />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-success">Save</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Bootstrap Javascript -->
     <script
