Converted the book card to template

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
       <!-- Books Cards Section -->
       <div id="book-cards-holder" class="mt-4">
         <!-- Template -->
-        <div class="bg-white border border-1 border-dark rounded p-3">
-          <h3>Title: Atomic Habits</h3>
-          <h3>Author: James Claire</h3>
-          <h3>Pages: 300</h3>
-          <h3>Language: English</h3>
+        <div
+          id="template-book-card"
+          class="bg-white border border-1 border-dark rounded p-3"
+        >
+          <h3>Title:</h3>
+          <h3>Author:</h3>
+          <h3>Pages:</h3>
+          <h3>Language:</h3>
           <div class="d-grid gap-2 mt-2">
             <button class="btn btn-outline-success fw-semibold" type="button">
               Read
