--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- style.css -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid container">
@@ -24,7 +24,7 @@
     </nav>
 
     <!-- Main -->
-    <main class="container">
+    <main class="container py-2">
       <!-- Add Books Button -->
       <div class="text-center">
         <button
@@ -166,6 +166,14 @@
         </button>
       </div>
     </div>
+
+    <!-- Footer -->
+
+    <footer class="mt-auto">
+      <div class="text-center p-3 bg-dark text-white fs-5 fw-semibold">
+        Copyright © 2023 Martin853
+      </div>
+    </footer>
 
     <!-- Bootstrap Javascript -->
     <script
